# sample-agentcore-lowcode-nocode

./: .gitignore  .secrets.baseline  CHANGELOG.md  NOTICE-backend.txt  README.md  package-lock.json
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: requirements-lambda.txt
backend/tests/: conftest.py  test_a2a_codegen.py  test_a2a_dispatch.py  test_agent_generator.py  test_agentic_rag_codegen.py  test_approval_service.py  test_aws_agent_registry.py  test_bundle_resolution_property.py  test_codegen_properties.py  test_comprehensive_preservation.py  test_config.py  test_cost_calculator.py  test_deployment_property.py  test_deployment_state_properties.py  test_e2e_gateway_memory.py  test_e2e_live_invocation.py  test_evaluations_router.py  test_exploration_bugs.py  (+30 more)
cli/: README.md  pyproject.toml
cli/agentcore_cli/: __init__.py  main.py
docs/: DEVELOPMENT.md  LOOM_ENHANCEMENT_PLAN.md  MCP_CATALOG.md  PERSONAS.md  PRODUCTION_READINESS.md  cross-account-deploy-role.json
frontend/: package-lock.json  package.json
infra/: app.py  requirements.txt
scripts/: cleanup.sh  deploy.sh  install-agentcore-deps.sh  verify-external-mcp.py  verify-otel.py
sdk/: README.md  pyproject.toml
sdk/agentcore_sdk/: __init__.py  client.py
sdk/tests/: test_client.py
tasks/: dark-neon-design-spec.md  e2e-coverage-matrix-20260708.md  e2e-report-CEDAR-RESOLVED-20260710.md  e2e-report-FINAL-20260709.md  e2e-report-FINAL2-20260709.md  e2e-report-FINAL3-20260709.md  lessons.md  official-ui-deploy-run-20260710.md  sprint-1.md  sprint-2.md  todo.md  verify-run-20260715.md
(+209 files in other folders)
