[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcore-sdk"
version = "0.1.0"
description = "Python SDK for the AgentCore Visual Workflow Platform"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "AgentCore Platform" }]
license = { text = "Apache-2.0" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentcore_sdk*"]
